--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
-    "html-loader": "^3.0.1",
     "path": "^0.12.7",
     "regenerator-runtime": "^0.13.9",
     "terser-webpack-plugin": "^5.3.0",
@@ -41,6 +40,8 @@
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.5.1",
+    "file-loader": "^6.2.0",
+    "html-loader": "^3.0.1",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.4.5",
     "mini-css-extract-plugin": "^2.4.5",
