--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.4.5",
     "mini-css-extract-plugin": "^2.4.5",
-    "node-fetch": "^3.1.0",
+    "node-fetch": "2.6.2",
     "node-sass": "^7.0.1",
     "papel": "^1.0.1",
     "sass": "^1.45.2",
